[tool.poetry]
name = "instancectl"
version = "1.0.0"
description = ""
authors = ["Björn Reetz <git@bjoern-reetz.de>"]

[tool.poetry.dependencies]
python = "^3.8"
oci = "^2.76.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
tox = "^3.25.1"
pytest = "^7.1.2"

[tool.poetry.scripts]
instancectl = "instancectl.cli:instancectl_cmd"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
